Make compliant with Java 11.