@@ -18,6 +18,7 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.OutputStreamWriter;
 import java.io.PrintWriter;
+import java.lang.reflect.InvocationTargetException;
 import java.util.Stack;
 import java.util.zip.GZIPOutputStream;
 
@@ -56,7 +57,7 @@ public class Runtime {
   private ThreadLocal<String> currentSite = new ThreadLocal<>();
 
   private ThreadLocal<Stack<String>> callStacks =
-      new ThreadLocal<Stack<String>>() {
+      new ThreadLocal<>() {
 
         @Override
         protected Stack<String> initialValue() {
@@ -83,8 +84,8 @@ public class Runtime {
     }
 
     try {
-      handleCallback = (Policy) Class.forName(policyClassName).newInstance();
-    } catch (InstantiationException | IllegalAccessException | ClassNotFoundException e) {
+      handleCallback = (Policy) Class.forName(policyClassName).getConstructor().newInstance();
+    } catch (InstantiationException | IllegalAccessException | ClassNotFoundException | InvocationTargetException | NoSuchMethodException e) {
       handleCallback = new DefaultCallbackPolicy();
     }
 
